--- a/DemonRitual/Assembly-CSharp.csproj
+++ b/DemonRitual/Assembly-CSharp.csproj
@@ -45,6 +45,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\ItemSpawner.cs" />
+     <Compile Include="Assets\MainMenu.cs" />
      <Compile Include="Assets\PlayerController.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
