--- a/DemonRitual/Assembly-CSharp.csproj
+++ b/DemonRitual/Assembly-CSharp.csproj
@@ -45,6 +45,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Item.cs" />
      <Compile Include="Assets\ItemSpawner.cs" />
      <Compile Include="Assets\MainMenu.cs" />
      <Compile Include="Assets\PlayerController.cs" />
