--- a/DemonRitual/Assembly-CSharp.csproj
+++ b/DemonRitual/Assembly-CSharp.csproj
@@ -51,6 +51,7 @@
      <Compile Include="Assets\ItemSpawner.cs" />
      <Compile Include="Assets\MainMenu.cs" />
      <Compile Include="Assets\PlayerController.cs" />
+     <Compile Include="Assets\ZombieAI.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
